--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://djkurt-dev.github.io/react-weather-app",
-  "name": "react-weather-app",
+  "homepage": "http://djkurt-dev.github.io/weather-app",
+  "name": "weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
